--- a/REUSE.toml
+++ b/REUSE.toml
@@ -3,4 +3,4 @@ version = 1
 [[annotations]]
 path = "**/*"
 SPDX-FileCopyrightText = "2025 apm.to Inc. <https://apm.to>"
-SPDX-License-Identifier = "MIT"
+SPDX-License-Identifier = ["MIT","ISC"]
